Update canonical and Open Graph URLs in index.html

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
    <title>AppTech Solutions | Web & IT Services in Zambia</title>
   <meta name="description" content="AppTech Solutions provides web development, networking, and IT infrastructure services in Zambia.">
     <meta name="robots" content="index, follow">
-  <link rel="canonical" href="https://apptechofficial.github.io/AppTech/">
+  <link rel="canonical" href="https://apptechofficial.work.gd">
   <meta property="og:title" content="AppTech Solutions">
   <meta property="og:description" content="Web, Networking & IT Services in Zambia">
-  <meta property="og:url" content="https://apptechofficial.github.io/AppTech/">
+  <meta property="og:url" content="https://apptechofficial.work.gd">
   <meta property="og:type" content="website">
     <link rel="canonical" href="https://apptechofficial.work.gd">
     <link rel="stylesheet" href="style.css">
