Update canonical link to use www subdomain

--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
    <title>AppTech Solutions | Web & IT Services in Zambia</title>
   <meta name="description" content="AppTech Solutions provides web development, networking, and IT infrastructure services in Zambia.">
     <meta name="robots" content="index, follow">
-  <link rel="canonical" href="https://apptech.work.gd">
   <meta property="og:title" content="AppTech Solutions">
   <meta property="og:description" content="Web, Networking & IT Services in Zambia">
   <meta property="og:url" content="https://apptech.work.gd">
   <meta property="og:type" content="website">
-    <link rel="canonical" href="https://apptech.work.gd">
+    <link rel="canonical" href="https://www.apptech.work.gd">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
